2006-10-29  Juhani Saastamoinen  <juhani@cs.joensuu.fi>

	* ls-mat5.cc (read_mat5_tag): Declare bytes as int32_t, not just int. 

2006-10-28  John W. Eaton  <jwe@octave.org>

	* toplev.cc (Fatexit): Push function names on the stack even if we
	don't have atexit or on_exit.

2006-10-28  Michael Goffioul  <michael.goffioul@swing.be>

	* mappers.cc (install_mapper_functions): Undefine toascii before
	the DEFUN_MAPPER for it.

2006-10-27  John W. Eaton  <jwe@octave.org>

	* mexproto.h: Include oct-dlldefs.h.

	* pr-output.cc (SPECIALIZE_UABS): New macro.
	Use it to generate specializations of abs for unsigned int types.
	Instantiate abs for signed int types.

	* load-path.cc (load_path::do_initialize):
	Use dir_path::path_sep_str instead of ":".
	Don't append ":::" to xpath when calling do_set.

	* dirfns.cc (Fls, cleanup_iprocstream): Delete.

	* sysdep.cc (Ftilde_expand): If arg is cellstr, return cellstr.

	* ov.h (octave_value::is_cellstr): New function.
	* ov-base.h (octave_base_value::is_cellstr): New function.
	* ov-cell.h (octave_cell::is_cellstr): New function.
	* ov-cell.cc (Fiscellstr): Implement with is_cellstr.
	* Cell.cc (Cell::Cell (const dim_vector&, const string_vector&, bool)): 
	New constructor.
	(Cell::is_cellstr): New function.
	* Cell.h: Provide decls.

	* defaults.cc (subst_octave_home): If dir_sep_char is not '/',
	replace before returning.
	From Michael Goffioul <michael.goffioul@swing.be>.

2006-10-26  John W. Eaton  <jwe@octave.org>

	* cutils.c (octave_strcasecmp, octave-strncasecmp):
	Move to liboctave/lo-cutils.c.
	* utils.h: Delete decls.
	* strcasecmp.c: Move to liboctave/strcasecmp.c.
	* strncase.c: Move to liboctave/strncase.c.
	* Makefile.in (DIST_SRC): Delete them from the list.

	* bitfcns.cc (bitshift): If A < 0, return -bitshift (-A, N, MASK).

2006-10-26  Michael Goffioul  <michael.goffioul@swing.be>

	* help.cc (display_help_text): Quote sed patterns with ".

	* file-io.cc: Include file-io.h.
